# Quantum-Eye

./: .gitignore  CACHE_AWARE_VQE_COMPARISON.md  README.md  REPRODUCE_BELL.md  compose.qe.yaml  cred_check.py  license  model_instructions.md  pyproject.toml  quantum_eye.py  readme.txt  requirements.txt  setup.sh
Documents/Slack Engine/core/: freedom.py
Documents/Slack Engine/eval/: test_brittleness_metrics.py  (+3 more)
Notebooks/: multi-basis_bell.ipynb
adapters/: quantum_eye_adapter.py
bell_hardware_validation_20250610_182159/: validation_results.json
core/: detection.py  error_mitigation.py  reconstruction.py  ucp.py
paper_tests/: test_bell_sim_paper_100_run.py
paper_tests/qe_paper_20250610_172135/: aggregated_results_ideal.json  scientific_summary_ideal.txt
papers/: EXPERIMENT_REPRO.md
qe-runner/: README.md  cache_reuse_demo.py  compare_results.py  constraint_cache.py  hamiltonian_elimination.py  run_experiment.py  scaled_experiment.py  test_noise_path.py  vqe_workload.py
src/quantum_eye/: __init__.py  quantum_eye.py
tests/: _adversarial_utils.py  baseline_comparison.py  circuit_generators.py  observable_metrics.py  query_ibm_fez_qubits.py  test_VQE_Multibasis.py  test_bell_real.py  test_bell_sim.py  test_bounded_cross_basis_validation.py  test_frequency_ablation_causality.py  test_ghz_real.py  test_identifiability_sameZ_different_invariant.py  test_noise_shots_regime_map.py  test_nullspace_honesty_cases.py  test_single_basis_observable_recovery.py  test_z_only_hardware_validation.py
utils/: imports.py  load_creds.py  visualize_qat_results.py
(+9 files in other folders)
