[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-eye"
version = "0.1.0"
description = "Quantum Eye utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # Minimal runtime deps - leave empty for now as specified
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

